[gd_scene load_steps=5 format=3 uid="uid://cgjcrfxvgjx77"]

[ext_resource type="Texture2D" uid="uid://cx8km15ds51f3" path="res://workshop/bottle.png" id="1_61s1m"]
[ext_resource type="Script" path="res://workshop/bottle.gd" id="1_ynuk4"]
[ext_resource type="PackedScene" uid="uid://btjeodbojes83" path="res://workshop/furble.tscn" id="2_lisl3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gf5bm"]
size = Vector2(56, 69)

[node name="Bottle" type="CharacterBody2D"]
script = ExtResource("1_ynuk4")

[node name="Bottle" type="Sprite2D" parent="."]
position = Vector2(1, -5)
texture = ExtResource("1_61s1m")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -30, 0, -21, -17, -14, -22, -6, -23, 7, -20, 15, -14, 21, -7, 26, 6, 27, 11, 25, 18, 19, 23, 10, 25, 3, 22, -7, 17, -14, 10, -19, 2, -21, 2, -30, 20, -27, 32, -18, 39, 10, 25, 33, 8, 41, -19, 38, -33, 25, -38, 8, -35, -11, -26, -25, -13, -27)

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Furble" parent="Marker2D" instance=ExtResource("2_lisl3")]

[node name="Furble2" parent="Marker2D" instance=ExtResource("2_lisl3")]
position = Vector2(9, -1)

[node name="Furble3" parent="Marker2D" instance=ExtResource("2_lisl3")]
position = Vector2(14, 6)

[node name="Furble4" parent="Marker2D" instance=ExtResource("2_lisl3")]
position = Vector2(3, 10)

[node name="Furble5" parent="Marker2D" instance=ExtResource("2_lisl3")]
position = Vector2(-9, 11)

[node name="Furble6" parent="Marker2D" instance=ExtResource("2_lisl3")]
position = Vector2(-11, 0)

[node name="Furble7" parent="Marker2D" instance=ExtResource("2_lisl3")]
position = Vector2(-5, -10)

[node name="Furble8" parent="Marker2D" instance=ExtResource("2_lisl3")]
position = Vector2(5, -12)

[node name="Furble9" parent="Marker2D" instance=ExtResource("2_lisl3")]
position = Vector2(10, 16)

[node name="Furble10" parent="Marker2D" instance=ExtResource("2_lisl3")]
position = Vector2(-2, 18)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_gf5bm")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
